<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="8"
    android:columnCount="4"
    android:layout_gravity="center"
    android:orientation="horizontal"
    >

    <EditText
        android:id="@+id/contentText"
        android:layout_columnSpan="4"
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:layout_gravity="fill"
        android:layout_marginTop="50sp"
        android:paddingTop="15sp"
        android:paddingRight="15sp"
        android:paddingLeft="15sp"
        android:gravity="end|bottom"
        android:typeface="sans"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="80sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="4sp"/>
    <Button
        android:id="@+id/bt_sin"
        android:text="@string/app_bt_sin"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textColor="@color/fuchsia"
        android:background="@drawable/click_blue"
        />
    <Button
        android:id="@+id/bt_cos"
        android:text="@string/app_bt_cos"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textColor="@color/fuchsia"
        android:background="@drawable/click_blue"/>
    <Button
        android:id="@+id/bt_l"
        android:text="@string/app_bracket_left"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textColor="@color/fuchsia"
        android:background="@drawable/click_blue"/>
    <Button
        android:id="@+id/bt_r"
        android:text="@string/app_bracket_right"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textColor="@color/fuchsia"
        android:background="@drawable/click_blue"/>

    <Button
        android:id="@+id/bt_AC"
        android:text="@string/app_AC"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textStyle="bold"
        android:textColor="@color/royalblue"
        android:background="@color/aliceblue"/>
    <Button
        android:id="@+id/bt_div"
        android:text="@string/app_div"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textStyle="bold"
        android:textColor="@color/royalblue"
        android:background="@color/aliceblue"/>
    <Button
        android:id="@+id/bt_multi"
        android:text="@string/app_multi"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textStyle="bold"
        android:textColor="@color/royalblue"
        android:background="@color/aliceblue"/>
    <Button
        android:id="@+id/bt_delete"
        android:text="@string/app_delete"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textStyle="bold"
        android:textColor="@color/royalblue"
        android:background="@color/aliceblue"/>
    <Button
        android:id="@+id/bt_num7"
        android:text="@string/app_num7"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size_Top"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"
        />
    <Button
        android:id="@+id/bt_num8"
        android:text="@string/app_num8"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size_Top"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
    <Button
        android:id="@+id/bt_num9"
        android:text="@string/app_num9"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size_Top"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
    <Button
        android:id="@+id/bt_dec"
        android:text="@string/app_dec"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textStyle="bold"
        android:textColor="@color/royalblue"
        android:background="@color/aliceblue"/>
    <Button
        android:id="@+id/bt_num4"
        android:text="@string/app_num4"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size_Top"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
    <Button
        android:id="@+id/bt_num5"
        android:text="@string/app_num5"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size_Top"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
    <Button
        android:id="@+id/bt_num6"
        android:text="@string/app_num6"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size_Top"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
    <Button
        android:id="@+id/bt_add"
        android:text="@string/app_add"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:textColor="@color/royalblue"
        android:background="@color/aliceblue"/>
    <Button
        android:id="@+id/bt_num1"
        android:text="@string/app_num1"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size_Top"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
    <Button
        android:id="@+id/bt_num2"
        android:text="@string/app_num2"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size_Top"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
    <Button
        android:id="@+id/bt_num3"
        android:text="@string/app_num3"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size_Top"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
    <Button
        android:id="@+id/bt_equal"
        android:text="@string/app_equal"
        android:layout_rowSpan="2"
        android:layout_gravity="fill_vertical"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textStyle="bold"
        android:textColor="@color/royalblue"
        android:background="@color/aliceblue"/>
    <Button
        android:id="@+id/bt_div100"
        android:text="@string/app_div100"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
    <Button
        android:id="@+id/bt_num0"
        android:text="@string/app_num0"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Text_Size_Top"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
    <Button
        android:id="@+id/bt_dot"
        android:text="@string/app_dot"
        android:layout_height="@dimen/N_Height"
        android:layout_width="@dimen/N_Width"
        android:textSize="@dimen/Dot_size"
        android:textStyle="bold"
        android:layout_gravity="fill"
        android:background="@color/azure"/>
</GridLayout>